# authentication-samples

./: README.md
Android/: README.md  local.properties  settings.gradle
C#/: .gitignore  README.md  spark-auth-sample-csharp.sln
C#/spark-auth-sample-csharp/: Default.aspx  Default.aspx.cs  Default.aspx.designer.cs  spark-auth-sample-csharp.csproj  style.css
C++/: CMakeLists.txt  Oauth2Client.cpp  README.md  build.sh  create_asset.cpp  create_source_within_asset.cpp  upload_file.cpp
C++/windows/: cpp-sample-app.sln
C++/windows/OAuth2Client/: OAuth2Client.vcxproj  OAuth2Client.vcxproj.filters
C++/windows/createAsset/: createAsset.vcxproj  createAsset.vcxproj.filters
C++/windows/createSource/: createSource.vcxproj  createSource.vcxproj.filters
C++/windows/uploadFile/: uploadFile.vcxproj  uploadFile.vcxproj.filters
Java/: README.md  pom.xml  spark-template.html
Javascript/: .gitignore  README.md  index.html  login-callback.html
Javascript/implicit-login/: README.md  index.html
Javascript/server-login/: index.html  login-callback.html
NodeJs/: README.md  config.js  package.json  server.js
NodeJs/views/: index.html
Objective-C/: README.md
Objective-C/Spark-sdk-demo/: AppDelegate.h  AppDelegate.m  FirstViewController.h  FirstViewController.m  Info.plist  main.m
Objective-C/Spark-sdk-demo.xcodeproj/: project.pbxproj
Objective-C/Spark-sdk-demoTests/: Spark_sdk_demoTests.m
PHP/: README.md  auth.php  config.php  style.css
Python/: README.md  SparkOAuth.py  requirements.txt
Ruby/: README.md  app.rb  config.rb
Ruby/views/: index.erb
(+19 files in other folders)
